--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1366,7 +1366,7 @@
 "delete_from_hidden_bin_popup_success_text" = "سوف تنتقل الملفات المختارة لسلة المهملات.سوف يمكنكم استرجاع ما بداخل سلة المهملات خلال 30 يوما.وإذا لزم فتح مساحة بذاكرة lifebox  فلا تنسى أولا تفريغ ما بسلة المهملات.";
 "unhide_popup_success_title" = "تم تحميل العناصر مرة أخرى.";
 "delete_popup_text" = "سوف تنتقل الملفات المختارة لسلة المهملات. يمكنكم استرجاع ما بداخل سلة المهملات خلال 30 يوما.وإذا لزم فتح مساحة بذاكرة lifebox  فلا تنسى أولا تفريغ ما بسلة المهملات.";
-"PackagesPolicyTextBillo" = "تُجدَّد الاشتراكات شهرياً.\nويُحمَّل حسابك في iTunes الرسوم عند تأكيد الشراء.\nوتُجدَّد الاشتراكات تلقائياً ما لم يُوقَف تشغيل خيار التجديد التلقائي قبل 24 ساعة على الأقل من وقت انتهاء الاشتراك في حينه.\nتخصم تكلفة التجديد من الحساب في خلال 24 ساعة قبل تاريخ تجديد الاشتراك. وتكون الرسوم كما هي في نافذة الشراء داخل التطبيق.\nيمكن للمستخدم بعد الشراء إدارة الاشتراك وإلغائه وخيار التجديد التلقائي وإيقافه من \"إعدادات الحساب\".\nيُصادر أي جزء متبقٍ من مدة التجربة المجانية -إن مُنحت- عند دفع المستخدم ثمن الاشتراك، وذلك حسب مقتضى الحال.\nنهج الخصوصية:https://mybilloapp.com/policy\nتعليمات الاستخدام: ";
+"PackagesPolicyTextBillo" = "تُجدَّد الاشتراكات شهرياً.\nويُحمَّل حسابك في iTunes الرسوم عند تأكيد الشراء.\nوتُجدَّد الاشتراكات تلقائياً ما لم يُوقَف تشغيل خيار التجديد التلقائي قبل 24 ساعة على الأقل من وقت انتهاء الاشتراك في حينه.\nتخصم تكلفة التجديد من الحساب في خلال 24 ساعة قبل تاريخ تجديد الاشتراك. وتكون الرسوم كما هي في نافذة الشراء داخل التطبيق.\nيمكن للمستخدم بعد الشراء إدارة الاشتراك وإلغائه وخيار التجديد التلقائي وإيقافه من \"إعدادات الحساب\".\nيُصادر أي جزء متبقٍ من مدة التجربة المجانية -إن مُنحت- عند دفع المستخدم ثمن الاشتراك، وذلك حسب مقتضى الحال.\nنهج الخصوصية:https://billostorage.com/policy\nتعليمات الاستخدام: ";
 "unhide_items_popup_text" = "سوف تنتقل العناصر المختارة للمجلدات القديمة وسوف تتمكن من الظهور في قوائم lifebox.هل ترغب في الاستمرار؟";
 "unhide_albums_popup_text" = "سوف تنتقل الألبومات المختارة ومحتوياتها للمجلدات القديمة وسوف تتمكن من الظهور في قوائم lifebox.هل ترغب في الاستمرار؟";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "سوف تنتقل الألبومات المختارة ومحتوياتها لسلة المهملات. سوف يمكنكم استرجاع ما بداخل سلة المهملات خلال 30 يوما.وإذا لزم فتح مساحة بذاكرة lifebox  فلا تنسى أولا تفريغ ما بسلة المهملات.";
@@ -1482,3 +1482,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "تمت إزالة الألبوم (الألبومات)";
+"hide_album_action_sheet" = "";
+"sign_up_password_rules" = "";
+"documents_album_card_title" = "";
+"documents_album_card_description" = "";
+"documents_album_card_hide_button" = "";
+"documents_album_card_view_button" = "";
+"snackbar_ok" = "";
+"snackbar_trash_bin" = "";
+"snackbar_hidden_bin" = "";
+"analyze_history_delete_success" = "";
+"added_to_favorites_message" = "";
+"removed_from_favorites" = "";
+"added_to_album" = "";
+"downloaded_files" = "";
+"edit_saved" = "";
+"files_moved" = "";
+"success_remove_passcode" = "";
+"added_to_favorites_from_lifebox" = "";
+"edit_security_question_success" = "";
+"set_security_question_success" = "";
+"import_from_instagram_started" = "";
+"import_from_facebook_started" = "";
+"instapick_hashtags_copied" = "";
+"create_story_selection_limit" = "";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "";
+"free_up_space_no_duplicates" = "";
+"free_up_space_in_progress" = "";
