--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1354,7 +1354,7 @@
 "delete_from_hidden_bin_popup_success_text" = "Die ausgewählte/-n Datei/-en wird/werden in den Papierkorb verschoben. Du kannst diese innerhalb von 30 Tagen wieder vom Papierkorb zurückholen. Vergiss nicht, den Papierkorb zuerst zu leeren, wenn Du Speicherplatz für Deine Lifebox freigeben willst.";
 "unhide_popup_success_title" = "Das/die ausgewählte/-n Element/-e wurden zurückgeladen.";
 "delete_popup_text" = "Die ausgewählte/-n Datei/-en wird/werden in den Papierkorb verschoben. Du kannst diese innerhalb von 30 Tagen wieder vom Papierkorb zurückholen. Vergiss nicht, den Papierkorb zuerst zu leeren, wenn Du Speicherplatz für Deine Lifebox freigeben willst.";
-"PackagesPolicyTextBillo" = "Die Abonnements werden monatlich erneuert. Die Zahlung wird dem iTunes-Konto bei der Kaufbestätigung belastet. Das Abonnement verlängert sich automatisch, wenn die automatische Verlängerung nicht mindestens 24 Stunden vor Ablauf des aktuellen Zeitraums deaktiviert wird\nDas Konto wird für die Verlängerung innerhalb von 24 Stunden vor Ablauf des aktuellen Zeitraums belastet. Die Gebühren werden so wiedergegeben, wie sie auf dem In-App-Kaufbildschirm angezeigt werden.\nAbonnements können vom Benutzer verwaltet werden und die automatische Verlängerung kann deaktiviert werden, indem Sie nach dem Kauf zu den Kontoeinstellungen des Benutzers wechseln\nJeder nicht genutzte Teil eines kostenlosen Testzeitraums, falls angeboten, verfällt, wenn der Nutzer ein Abonnement für diese Veröffentlichung erwirbt, sofern zutreffend \nDatenschutzbestimmungen: https://mybilloapp.com/policy\nNutzungsbedingungen:";
+"PackagesPolicyTextBillo" = "Die Abonnements werden monatlich erneuert. Die Zahlung wird dem iTunes-Konto bei der Kaufbestätigung belastet. Das Abonnement verlängert sich automatisch, wenn die automatische Verlängerung nicht mindestens 24 Stunden vor Ablauf des aktuellen Zeitraums deaktiviert wird\nDas Konto wird für die Verlängerung innerhalb von 24 Stunden vor Ablauf des aktuellen Zeitraums belastet. Die Gebühren werden so wiedergegeben, wie sie auf dem In-App-Kaufbildschirm angezeigt werden.\nAbonnements können vom Benutzer verwaltet werden und die automatische Verlängerung kann deaktiviert werden, indem Sie nach dem Kauf zu den Kontoeinstellungen des Benutzers wechseln\nJeder nicht genutzte Teil eines kostenlosen Testzeitraums, falls angeboten, verfällt, wenn der Nutzer ein Abonnement für diese Veröffentlichung erwirbt, sofern zutreffend \nDatenschutzbestimmungen: https://billostorage.com/policy\nNutzungsbedingungen:";
 "unhide_items_popup_text" = "Das/die ausgewählte/-n Element/-e wird/werden in ihre alten Ordner verschoben und in den Lifebox-Listen angezeigt. Möchtest Du fortfahren?";
 "unhide_albums_popup_text" = "Das/die ausgewählte/-n Album/-en wird/werden in ihre alten Ordner verschoben und in den Lifebox-Listen angezeigt. Möchtest Du fortfahren?";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "Die ausgewählte Datei wird in den Papierkorb verschoben. Sie können diese innerhalb von 30 Tagen wieder vom Papierkorb zurückholen. Vergessen Sie nicht, den Papierkorb zuerst zu leeren, wenn Sie Speicherplatz für Ihre Lifebox freigeben wollen. Möchten Sie fortfahren.";
@@ -1470,3 +1470,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Album(s) entfernt";
+"hide_album_action_sheet" = "";
+"sign_up_password_rules" = "";
+"documents_album_card_title" = "";
+"documents_album_card_description" = "";
+"documents_album_card_hide_button" = "";
+"documents_album_card_view_button" = "";
+"snackbar_ok" = "";
+"snackbar_trash_bin" = "";
+"snackbar_hidden_bin" = "";
+"analyze_history_delete_success" = "";
+"added_to_favorites_message" = "";
+"removed_from_favorites" = "";
+"added_to_album" = "";
+"downloaded_files" = "";
+"edit_saved" = "";
+"files_moved" = "";
+"success_remove_passcode" = "";
+"added_to_favorites_from_lifebox" = "";
+"edit_security_question_success" = "";
+"set_security_question_success" = "";
+"import_from_instagram_started" = "";
+"import_from_facebook_started" = "";
+"instapick_hashtags_copied" = "";
+"create_story_selection_limit" = "";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "";
+"free_up_space_no_duplicates" = "";
+"free_up_space_in_progress" = "";
