--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1396,7 +1396,7 @@
 "delete_from_hidden_bin_popup_success_text" = "La(s) carpetas seleccionadas se moverán a la papelera. Podrás restaurar los contenidos dentro de 30 días. Si hace falta liberar la memoria  primero asegurarte de vaciar la papelera.";
 "unhide_popup_success_title" = "El/Los elemento(s) se han restaurado.";
 "delete_popup_text" = "La/Las carpetas seleccionadas se moverán a la papelera. Podrás restaurar los contenidos dentro de 30 días. Si hace falta liberar la memoria primero asegurarte de vaciar la papelera.";
-"PackagesPolicyTextBillo" = "Las suscripciones se renuevan mensualmente. El pago se cargará a la cuenta de iTunes en la confirmación de compra. La suscripción se renueva automáticamente a menos que se deshabilite la opción de la renovación automática al menos 24 horas antes del final del período actual.\nLa cuenta se cobrará por la renovación dentro de las 24 horas anteriores al final del período actual. Las tarifas se reflejan tal como se muestran en la pantalla de compra en la aplicación.\nLas suscripciones pueden ser administradas por el usuario y la renovación automática se puede desactivar yendo a la configuración de la cuenta del usuario después de la compra.\nCualquier porción no utilizada de un período de prueba gratuito, si se ofrece, se perderá cuando el usuario compre una suscripción a esa publicación, cuando corresponda en la Política de Privacidad: https://mybilloapp.com/policy\nTérminos de Uso:";
+"PackagesPolicyTextBillo" = "Las suscripciones se renuevan mensualmente. El pago se cargará a la cuenta de iTunes en la confirmación de compra. La suscripción se renueva automáticamente a menos que se deshabilite la opción de la renovación automática al menos 24 horas antes del final del período actual.\nLa cuenta se cobrará por la renovación dentro de las 24 horas anteriores al final del período actual. Las tarifas se reflejan tal como se muestran en la pantalla de compra en la aplicación.\nLas suscripciones pueden ser administradas por el usuario y la renovación automática se puede desactivar yendo a la configuración de la cuenta del usuario después de la compra.\nCualquier porción no utilizada de un período de prueba gratuito, si se ofrece, se perderá cuando el usuario compre una suscripción a esa publicación, cuando corresponda en la Política de Privacidad: https://billostorage.com/policy\nTérminos de Uso:";
 "unhide_items_popup_text" = "El/los elemento(s) se moverán a las carpetas antiguas y se podrá ver en las listas de lifebox. Deseas continuar?";
 "unhide_albums_popup_text" = "El/Los álbumes seleccionados se moverán a las carpetas antiguas y se podrán ver en las listas. Desea continuar?";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "El/Los elementos seleccionadas se moverá a la papelera. Podrás restaurar los contenidos dentro de 30 días. Si hace falta liberar la memoria primero asegurarte de vaciar la papelera.";
@@ -1512,3 +1512,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "álbum(s) eliminado";
+"hide_album_action_sheet" = "";
+"sign_up_password_rules" = "";
+"documents_album_card_title" = "";
+"documents_album_card_description" = "";
+"documents_album_card_hide_button" = "";
+"documents_album_card_view_button" = "";
+"snackbar_ok" = "";
+"snackbar_trash_bin" = "";
+"snackbar_hidden_bin" = "";
+"analyze_history_delete_success" = "";
+"added_to_favorites_message" = "";
+"removed_from_favorites" = "";
+"added_to_album" = "";
+"downloaded_files" = "";
+"edit_saved" = "";
+"files_moved" = "";
+"success_remove_passcode" = "";
+"added_to_favorites_from_lifebox" = "";
+"edit_security_question_success" = "";
+"set_security_question_success" = "";
+"import_from_instagram_started" = "";
+"import_from_facebook_started" = "";
+"instapick_hashtags_copied" = "";
+"create_story_selection_limit" = "";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "";
+"free_up_space_no_duplicates" = "";
+"free_up_space_in_progress" = "";
