--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -371,7 +371,7 @@
 "E-mail Usage Information" = "Informacion i Përdorimit të E-mail ";
 "Password fields do not match." = "Fjalëkalimet nuk përputhen.";
 "Please check the e-mail address." = "Ju lutem, kontrolloni adresën e e-mail.";
-"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Ju lutem, vendosni një fjalëkalim që nuk përfshin shkronja e numra të njëpasnjëshëm, minimumi 6 e maksimumi 16 karaktere.";
+"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Ju lutem vendosni një fjalëkalim që përfshin gërma dhe numra të pandërprerë, minimumi 6 maksimumi 16 karaktere.";
 "Please check the GSM number" = "Ju lutem, kontrolloni numrin tuaj të Telefonit";
 "Login denied. Please check your credentials." = "Hyrja juaj u refezua. Ju lutem, kontrolloni kredencialet tuaja.";
 "Request failed \n Please try again" = "Kërkesa dështoi. Ju lutem, provoni përsëri.";
@@ -1397,7 +1397,7 @@
 "delete_from_hidden_bin_popup_success_text" = "Njësitë e pëzgjedhura do të zhvendosen në kosh. Ju mund t'i riktheni në 30 ditë. Ju lutem zbrazni koshin në rast se ju duhet të lironi hapsirë.";
 "unhide_popup_success_title" = "Njësitë u zbuluan me sukses";
 "delete_popup_text" = "Njësitë e pëzgjedhura do të zhvendosen në kosh. Ju mund t'i riktheni në 30 ditë. Ju lutem zbrazni koshin në rast se ju duhet të lironi hapsirë.";
-"PackagesPolicyTextBillo" = "Abonimet rinovohen çdo muaj.\nPagesa do i ngarkohet llogarisë iTunes pas konfirmimit të blerjes. \nAbonimi rinovohet në mënyrë automatike nëse nuk është i çaktivizuar 24 orë përpara përfundimit të afatit. \nLlogaria do të faturohet për rinovim brenda 24 orësh përpara përfundimit të afatit. Tarifat janë të njëjtat me ato të shfaqura në ekranin e aplikacionit. \nAbonimi mund të manaxhohet nga vetë përdoruesi dhe rinovimi automatik mund të çaktivizohet duke shkuar tek Rregullimet e Llogarisë së përdoruesit pas blerjes. \nÇdo ditë e papërdorur e periudhës së provës pa pagesë, nëse ofrohet, do të konfiskohet kur përdoruesi të blejë një abonim në atë publikim, aty ku është e aplikueshme. \nPolitika e Privatsisë: https://mybilloapp.com/policy\nKushtet e Përdorimit:";
+"PackagesPolicyTextBillo" = "Abonimet rinovohen çdo muaj.\nPagesa do i ngarkohet llogarisë iTunes pas konfirmimit të blerjes. \nAbonimi rinovohet në mënyrë automatike nëse nuk është i çaktivizuar 24 orë përpara përfundimit të afatit. \nLlogaria do të faturohet për rinovim brenda 24 orësh përpara përfundimit të afatit. Tarifat janë të njëjtat me ato të shfaqura në ekranin e aplikacionit. \nAbonimi mund të manaxhohet nga vetë përdoruesi dhe rinovimi automatik mund të çaktivizohet duke shkuar tek Rregullimet e Llogarisë së përdoruesit pas blerjes. \nÇdo ditë e papërdorur e periudhës së provës pa pagesë, nëse ofrohet, do të konfiskohet kur përdoruesi të blejë një abonim në atë publikim, aty ku është e aplikueshme. \nPolitika e Privatsisë: https://billostorage.com/policy\nKushtet e Përdorimit:";
 "unhide_items_popup_text" = "Njësitë e përzgjedhura do të zbulohen dhe do të zhvendosen në skedarët e mëparshëm.";
 "unhide_albums_popup_text" = "Albumet e përzgjedhur do të zbulohen dhe do të zhvendosen në skedarët e mëparshëm.";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "Albumet e pëzgjedhur do të zhvendosen në kosh. Ju mund t'i riktheni në 30 ditë. Ju lutem zbrazni koshin në rast se ju duhet të lironi hapsirë.";
@@ -1513,3 +1513,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Albumet u hoqën";
+"hide_album_action_sheet" = "";
+"sign_up_password_rules" = "";
+"documents_album_card_title" = "";
+"documents_album_card_description" = "";
+"documents_album_card_hide_button" = "";
+"documents_album_card_view_button" = "";
+"snackbar_ok" = "";
+"snackbar_trash_bin" = "";
+"snackbar_hidden_bin" = "";
+"analyze_history_delete_success" = "";
+"added_to_favorites_message" = "";
+"removed_from_favorites" = "";
+"added_to_album" = "";
+"downloaded_files" = "";
+"edit_saved" = "";
+"files_moved" = "";
+"success_remove_passcode" = "";
+"added_to_favorites_from_lifebox" = "";
+"edit_security_question_success" = "";
+"set_security_question_success" = "";
+"import_from_instagram_started" = "";
+"import_from_facebook_started" = "";
+"instapick_hashtags_copied" = "";
+"create_story_selection_limit" = "";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "";
+"free_up_space_no_duplicates" = "";
+"free_up_space_in_progress" = "";
