--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1354,7 +1354,7 @@
 "delete_from_hidden_bin_popup_success_text" = "Fișierele selectate vor fi eliminate în coșul de gunoi. Le puteți restaura în 30 de zile. Vă rugăm să goliți coșul de gunoi în caz de nevoie pentru a elibera spațiu.";
 "unhide_popup_success_title" = "Element (e) ne-ascuns cu succes.";
 "delete_popup_text" = "Fișierele selectate vor fi eliminate în coșul de gunoi. Le puteți restaura în 30 de zile. Vă rugăm să goliți coșul de gunoi în caz de nevoie pentru a elibera spațiu.";
-"PackagesPolicyTextBillo" = "Abonamentele sunt reînnoite lunar.  Plata va fi preluată de pe contul iTunes la confirmarea achiziției.\nAbonamentul se reînnoiește automat, cu excepția cazului în care opțiunea de auto-reînnoire este oprită cu cel puțin 24 de ore înainte de expirarea perioadei curente.\nPlata se va extrage cu 24 de ore înainte de sfârșitul perioadei curente. Taxele se reflectă pe măsură ce sunt afișate în ecranul de achiziție al aplicației.\nAbonamentele pot fi gestionate de utilizator și reînnoirea automată poate fi oprită din setări.\nDacă utilizatorul achiziționează abonamentul în perioada de testare gratuită, partea neutilizată a acestei perioade - se pierde.\nPolitica de confidențialitate: https://mybilloapp.com/policy\nTermeni de utilizare:";
+"PackagesPolicyTextBillo" = "Abonamentele sunt reînnoite lunar.  Plata va fi preluată de pe contul iTunes la confirmarea achiziției.\nAbonamentul se reînnoiește automat, cu excepția cazului în care opțiunea de auto-reînnoire este oprită cu cel puțin 24 de ore înainte de expirarea perioadei curente.\nPlata se va extrage cu 24 de ore înainte de sfârșitul perioadei curente. Taxele se reflectă pe măsură ce sunt afișate în ecranul de achiziție al aplicației.\nAbonamentele pot fi gestionate de utilizator și reînnoirea automată poate fi oprită din setări.\nDacă utilizatorul achiziționează abonamentul în perioada de testare gratuită, partea neutilizată a acestei perioade - se pierde.\nPolitica de confidențialitate: https://billostorage.com/policy\nTermeni de utilizare:";
 "unhide_items_popup_text" = "Elementul (ele) selectat (ă) va fi ne-ascuns și va fi mutat înapoi în dosarele anterioare.";
 "unhide_albums_popup_text" = "Albumul (albumele) selectat (ă) va fi ne-ascusc și va fi mutat înapoi în dosarele anterioare.";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "Albumul (albumele) selectat (ă) vor fi eliminate în coșul de gunoi. Le puteți restaura în 30 de zile. Vă rugăm să goliți coșul de gunoi în caz de nevoie pentru a elibera spațiu.";
@@ -1470,3 +1470,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Albumul(ele) eliminate";
+"hide_album_action_sheet" = "";
+"sign_up_password_rules" = "";
+"documents_album_card_title" = "";
+"documents_album_card_description" = "";
+"documents_album_card_hide_button" = "";
+"documents_album_card_view_button" = "";
+"snackbar_ok" = "";
+"snackbar_trash_bin" = "";
+"snackbar_hidden_bin" = "";
+"analyze_history_delete_success" = "";
+"added_to_favorites_message" = "";
+"removed_from_favorites" = "";
+"added_to_album" = "";
+"downloaded_files" = "";
+"edit_saved" = "";
+"files_moved" = "";
+"success_remove_passcode" = "";
+"added_to_favorites_from_lifebox" = "";
+"edit_security_question_success" = "";
+"set_security_question_success" = "";
+"import_from_instagram_started" = "";
+"import_from_facebook_started" = "";
+"instapick_hashtags_copied" = "";
+"create_story_selection_limit" = "";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "";
+"free_up_space_no_duplicates" = "";
+"free_up_space_in_progress" = "";
