--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1356,7 +1356,7 @@
 "delete_from_hidden_bin_popup_success_text" = "Вибрані файли будуть переміщені в корзину. Ви зможете повернути їх протягом 30 днів. Якщо вам потрібно звільнити пам'ять lifebox, спочатку обов'язково очиститикорзину.";
 "unhide_popup_success_title" = "Елементи відновлені.";
 "delete_popup_text" = "Вибрані файли будуть переміщені в корзину. Ви зможете повернути їх протягом 30 днів. Якщо вам потрібно звільнити пам'ять lifebox, спочатку обов'язково очиститикорзину.";
-"PackagesPolicyTextBillo" = "Підписки поновлюються щомісяця\nОплату буде стягнуто з рахунку iTunes за підтвердження покупки\nПередплата автоматично поновлюється, якщо автоматичне оновлення не буде вимкнено принаймні за 24 години до кінця поточного періоду\nПлата буде стягуватися за поновлення протягом 24 годин до закінчення поточного періоду. Плата відображається, оскільки вона відображається на екрані покупки в програмі.\nКористувачі можуть керувати, автоматичне оновлення може бути вимкнено, перейшовши до налаштувань облікового запису користувача після покупки\nБудь-яка невикористана частина безкоштовного пробного періоду, якщо вона пропонується, буде втрачена, коли користувач купує підписку на цю публікацію, де це можливо\nПолітика конфіденційності: https://mybilloapp.com/policy\nУмови користування:";
+"PackagesPolicyTextBillo" = "Підписки поновлюються щомісяця\nОплату буде стягнуто з рахунку iTunes за підтвердження покупки\nПередплата автоматично поновлюється, якщо автоматичне оновлення не буде вимкнено принаймні за 24 години до кінця поточного періоду\nПлата буде стягуватися за поновлення протягом 24 годин до закінчення поточного періоду. Плата відображається, оскільки вона відображається на екрані покупки в програмі.\nКористувачі можуть керувати, автоматичне оновлення може бути вимкнено, перейшовши до налаштувань облікового запису користувача після покупки\nБудь-яка невикористана частина безкоштовного пробного періоду, якщо вона пропонується, буде втрачена, коли користувач купує підписку на цю публікацію, де це можливо\nПолітика конфіденційності: https://billostorage.com/policy\nУмови користування:";
 "unhide_items_popup_text" = "Вибрані елементи будуть переміщені назад в їх старі папки та будуть зображатися в списках lifebox. Ви бажаєте продовжити?";
 "unhide_albums_popup_text" = "Вибрані альбоми та їх зміст будуть переміщені назад в їх старі папки та будуть зображатися в списках lifebox. Ви бажаєте продовжити?";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "Вибрані альбоми та їх зміст будуть переміщені будуть переміщені в корзину. Ви зможете отримати альбом та його елементи протягом 30 днів. Якщо вам потрібно звільнити пам'ять lifebox, не забудьте спочатку очистити корзину.";
@@ -1472,3 +1472,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "альбом видалено";
+"hide_album_action_sheet" = "";
+"sign_up_password_rules" = "";
+"documents_album_card_title" = "";
+"documents_album_card_description" = "";
+"documents_album_card_hide_button" = "";
+"documents_album_card_view_button" = "";
+"snackbar_ok" = "";
+"snackbar_trash_bin" = "";
+"snackbar_hidden_bin" = "";
+"analyze_history_delete_success" = "";
+"added_to_favorites_message" = "";
+"removed_from_favorites" = "";
+"added_to_album" = "";
+"downloaded_files" = "";
+"edit_saved" = "";
+"files_moved" = "";
+"success_remove_passcode" = "";
+"added_to_favorites_from_lifebox" = "";
+"edit_security_question_success" = "";
+"set_security_question_success" = "";
+"import_from_instagram_started" = "";
+"import_from_facebook_started" = "";
+"instapick_hashtags_copied" = "";
+"create_story_selection_limit" = "";
+"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"free_up_space_alert_title" = "";
+"free_up_space_no_duplicates" = "";
+"free_up_space_in_progress" = "";
