--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -490,6 +490,13 @@
 "contact_phase2_delete_contacts_confirm_message" = "These contacts will be deleted from your lifebox. Are you sure you want to delete?";
 "contact_phase2_delete_all_contacts_success_message" = "You delete all contacts on your list. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
 
+"contact_phase2_contact_detail_navbar_title" = "Contact Detail";
+"contact_phase2_contact_detail_section_phone" = "Phone";
+"contact_phase2_contact_detail_section_email" = "Email";
+"contact_phase2_contact_detail_section_address" = "Address";
+"contact_phase2_contact_detail_section_birthday" = "Birthday";
+"contact_phase2_contact_detail_section_notes" = "Notes";
+
 /*free up spce card or storage full card? which one?*/
 "You are using %f of your disk space! It’s a great time to expand your storage." = "You are using %d%% of your lifebox quota! It’s a great time to upgrade your storage.";
 "You seem to have no uploaded files. Start uploading your memories on Lifebox!" = "You don't have any files in your lifebox, yet. Start uploading your memories on lifebox!";
