--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1024,7 +1024,7 @@
 "etk_permission_description" = "I hereby give my consent to receive commercial e-mail messages in order to be informed about advantageous products and services of Turkcell and its Group Companies unless and until I request otherwise pursuant to the Law No. 6563 and other applicable legislation.";
 "global_permission_title_label" = "Global Data Permission";
 "global_permission_description" = "I consent my personal information to be shared with the cooperation operators by Turkcell in order for me to utilize the advantageous services of relevant operator regarding lifebox.";
-"terms_and_use_etk_checkbox_header" = "I have read and accept the text of Commercial Electronic Message and Data Consnet.";
+"terms_and_use_etk_checkbox_header" = "I have read and accept the text of Commercial Electronic Message and Data Consent.";
 "global_data_permission_agreement" = "I consent my personal information to be shared with the cooperation operators by Turkcell in order for me to utilize the advantageous services of relevant operator regarding lifebox. Click for detailed information.";
 "global_data_permission_link" = "Click for detailed information";
 "global_permission_header" = "Global Data Permission";
