--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -496,6 +496,7 @@
 "contact_phase2_contact_detail_section_address" = "Address";
 "contact_phase2_contact_detail_section_birthday" = "Birthday";
 "contact_phase2_contact_detail_section_notes" = "Notes";
+"contact_phase2_contact_detail_no_info" = "No contact information";
 
 /*free up spce card or storage full card? which one?*/
 "You are using %f of your disk space! It’s a great time to expand your storage." = "You are using %d%% of your lifebox quota! It’s a great time to upgrade your storage.";
