--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1580,3 +1580,6 @@
 "contact_phase2_big_card_see_contacts_button" = "See Contacts";
 "contact_phase2_big_card_autobackup_format" = "Auto Backup: %@";
 
+"contact_phase2_backup_progress_title" = "Back up Contacts";
+"contact_phase2_backup_progress_message" = "You can backup your contacts to lifebox.\nBy doing that you can easly access your contact list from any device and anywhere.";
+
