FE-2599, iOS: New Info Design - Info screen does not close and does not return to preview mode FE-2521, CLONE - IOS | The alert includes Turkish and English words FE-2597, iOS : New Info Design - After making INFO page to full screen, it is difficult to bring it back with swiping

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -72,6 +72,7 @@
 "Buy" = "Purchase";
 "Cancel" = "Cancel";
 "Info" = "Info";
+"download_document_error_popup" = "Only for photo & Video";
 "You can open settings and cancel subscption." = "To cancel your package, please use iTunes & App Store menu in your device.";
 "Please text \"Iptal LIFEBOX %@\" to 2222 to cancel your subscription" = "To cancel your package, please send an SMS to 2200 with this text: \"IPTAL LIFEBOX %@\"";
 "You can visit iTunes to cancel your subscription" = "To cancel your package, please use iTunes & App Store menu in your device.";
