--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1644,3 +1644,6 @@
 "contact_phase2_warning_popup_storage_limit_title" = "Permission Denied";
 "contact_phase2_warning_popup_storage_limit_message" = "You don’t give the permission to backup your contacts from your phone.";
 "contact_phase2_warning_popup_storage_limit_settings_button" = "Settings";
+"contact_phase2_error_iternal" = "contact_phase2_error_iternal";
+"contact_phase2_error_quota_restore" = "contact_phase2_error_quota_restore";
+"contact_phase2_error_quota_backup" = "contact_phase2_error_quota_backup";
